--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "start": "tsc && node dist/src/app.js",
     "lint": "eslint . --ext .ts",
     "devstart": "nodemon ./src/app.ts",
-    "coverage": "tsc && jest --collect-coverage --detectOpenHandles --forceExit --runInBand ./dist/src/tests "    
+    "coverage": "tsc && jest --collect-coverage --detectOpenHandles --forceExit --runInBand ./dist/src/tests "
   },
   "author": "Yoni Ifrah",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "form-data": "^4.0.0",
